# spiel-demos

./: .gitignore  README.md  espeak.flatpakref  index.html  piper.flatpakref  spiel-it.flatpakref
.github/workflows/: build-repo.yml  espeak-flatpak.yml  mimic3-flatpak.yml  spiel-it-flatpak.yml
build-aux/: ai.mimic3.Speech.Provider.json  ai.piper.Speech.Provider.json  espeak-cargo-sources.json  org.espeak.Speech.Provider.json  org.monotonous.spiel-it.json  piper-voices.json
espeak/: meson.build
espeak/build-aux/: cargo-sources.json  cargo.py  org.espeak.Speech.Provider.json
espeak/data/: org.espeak.Speech.Provider.service.in
espeak/src/: main.rs  meson.build
mimic3/speech_provider_mimic3/: main.py
providers/espeak/: Cargo.toml  Gir.toml  meson.build
providers/espeak/speech-provider-sys/: Cargo.toml  Gir.toml  build.rs
providers/espeak/speech-provider-sys/src/: lib.rs
providers/espeak/speech-provider-sys/src/auto/: versions.txt
providers/espeak/speech-provider-sys/tests/: abi.rs  constant.c  layout.c  manual.h
providers/espeak/spiel-provider-sys/: Cargo.toml  Gir.toml  build.rs
providers/espeak/spiel-provider-sys/src/: lib.rs
providers/espeak/spiel-provider-sys/src/auto/: versions.txt
providers/espeak/spiel-provider-sys/tests/: abi.rs  constant.c  layout.c  manual.h
providers/espeak/src/: main.rs
providers/espeak/src/auto/: enums.rs  flags.rs  mod.rs  stream_writer.rs  versions.txt
providers/mimic3/: meson.build  requirements.txt  speech-provider-mimic3.py.in
providers/mimic3/build-aux/: ai.mimic3.Speech.Provider.json
providers/mimic3/data/: ai.mimic3.Speech.Provider.service.in
providers/mimic3/speech_provider_mimic3/: main.py
providers/piper/: meson.build
providers/piper/build-aux/: ai.piper.Speech.Provider.json
providers/piper/speech_provider_piper/: main.py
repo/: summary  summary.idx  summary.idx.sig  summary.sig
repo/refs/heads/app/ai.piper.Speech.Provider/x86_64/: master
repo/refs/heads/app/org.espeak.Speech.Provider/x86_64/: master
repo/refs/heads/app/org.monotonous.spiel-it/x86_64/: master
repo/refs/heads/appstream/: x86_64
repo/refs/heads/appstream2/: x86_64
repo/refs/heads/runtime/ai.piper.Speech.Provider.Debug/x86_64/: master
repo/refs/heads/runtime/org.espeak.Speech.Provider.Debug/x86_64/: master
repo/refs/heads/runtime/org.monotonous.spiel_it.Debug/x86_64/: master
repo/summaries/: 43547e70cec7b907ed792a245805e91bb115c6b0951dd79b91f5022d5a3ab18d-d56d3cf336d96f6a02a13991372d6e83c81edea8efcf84f0f6314b3420561910.delta  4dbe5eece07e6f7ecceb82b725abbc6c54471ae6e2c78eb5ee79d72326f71c10-d56d3cf336d96f6a02a13991372d6e83c81edea8efcf84f0f6314b3420561910.delta  54eba38409b45ac7bef5959d4d7b59153213f84c5321e64f4c750f2453b2c61d-d56d3cf336d96f6a02a13991372d6e83c81edea8efcf84f0f6314b3420561910.delta  79e415765755247705eab3d529325bc48b1fcb91cf969622c793e7d89763cb05-d56d3cf336d96f6a02a13991372d6e83c81edea8efcf84f0f6314b3420561910.delta  b018de86c50324c4dc6941e5740a6e89dd795a31738ec66923a2d205468dc1ce-d56d3cf336d96f6a02a13991372d6e83c81edea8efcf84f0f6314b3420561910.delta  c3636b0d989fd1ab63e0a11eabf8eac21b0f0eb38489059e56b951daeb142bc8-d56d3cf336d96f6a02a13991372d6e83c81edea8efcf84f0f6314b3420561910.delta  e3139e76e7ba07a80417ea87dca47bcc0cc79a4a11cc014d5aadd7098f39b227-d56d3cf336d96f6a02a13991372d6e83c81edea8efcf84f0f6314b3420561910.delta  f011cc223f2ee1240f144346394c0a4a891c9382fb61f55db1de3be95d332b10-d56d3cf336d96f6a02a13991372d6e83c81edea8efcf84f0f6314b3420561910.delta
spiel-it/: meson.build  org.monotonous.spiel-it.json
spiel-it/spiel_it/: main.py
